--- a/asciidoc-classic.css
+++ b/asciidoc-classic.css
@@ -20,25 +20,25 @@ body {
   }
   
   a {
-    color: blue;
+    color: rgb(107, 233, 166);
     text-decoration: underline;
   }
   a:visited {
-    color: fuchsia;
+    color: rgb(255, 255, 255);
   }
   
   em {
     font-style: italic;
-    color: navy;
+    color: 00ff2b;
   }
   
   strong {
     font-weight: bold;
-    color: #083194;
+    color: #36ba01;
   }
   
   h1, h2, h3, h4, h5, h6 {
-    color: #527bbd;
+    color: #00ff2b;
     margin-top: 1.2em;
     margin-bottom: 0.5em;
     line-height: 1.3;
@@ -82,7 +82,7 @@ body {
   .monospaced, code, pre {
     font-family: "Courier New", Courier, monospace;
     font-size: inherit;
-    color: navy;
+    color: #00ff2b;
     padding: 0;
     margin: 0;
   }
@@ -91,7 +91,7 @@ body {
   }
   
   #author {
-    color: #527bbd;
+    color: #36ba01;
     font-weight: bold;
     font-size: 1.1em;
   }
@@ -159,14 +159,14 @@ body {
   }
   
   div.sidebarblock > div.content {
-    background: #ffffee;
+    background: #1f1f1f;
     border: 1px solid #dddddd;
     border-left: 4px solid #f0f0f0;
     padding: 0.5em;
   }
   
   div.listingblock > div.content {
-    border: 1px solid #dddddd;
+    border: 1px solid #1f1f1f;
     border-left: 5px solid #f0f0f0;
     background: #f8f8f8;
     padding: 0.5em;
@@ -340,7 +340,7 @@ body {
   }
   
   #toctitle {
-    color: #527bbd;
+    color: #009a22;
     font-size: 1.1em;
     font-weight: bold;
     margin-top: 1.0em;
